# TLS

./: CMakeLists.txt  CMakeLists.txt.old  CMakeLists.txt_  CTestConfig.cmake  README.md  test.py
CMake/: FindCMakeAll.cmake  Launcher.cmake
CMakeModules/: FindGeos.cmake  FindLMFIT.cmake  FindXercesC.cmake
Doc/: CMakeLists.txt  CompilingQt.md  Doxyfile.in  m2cpp.pl
Projects/: BiiGOptitrack.cmake_  Boost.cmake  CTK.cmake_  (+29 more)
Segmentation_Modules/AirwaySegmentationAuto_v2/: AirwaySegment1.sh  AirwaySegment2.sh  CMakeLists.txt  Label.h  PotentialAndIndex.h  SegmentAirwayTree_FM.cxx  SegmentControls.sh  fm_air_ext.py  itkFindTracheaImageFilter.h  itkFindTracheaImageFilter.txx  itkHuThresholdImageFilter.h  itkHuThresholdImageFilter.txx  itkTreeSegmentationImageFilter.h  itkTreeSegmentationImageFilter.txx  moc_AirwaySegmentation.cxx
Segmentation_Modules/Lungs_Segmentation/: CMakeLists.txt  itkLabelExtractorFilter.h  itkLabelExtractorFilter.txx  itkRegionFilter.h  itkRegionFilter.txx  lungs_analyze.sh
Segmentation_Modules/Lungs_Segmentation/airways/: CMakeLists.txt  SecondPassFM.cxx  SegmentAirwayTree_FM.cxx  SegmentAirwayTree_FM_multiseed.cxx  itkBinaryTreeSegmentationImageFilter.h  itkBinaryTreeSegmentationImageFilter.txx  itkSegmentSpatialObject.h  itkSegmentSpatialObject.txx  itkTreeSegmentationImageFilter.h  itkTreeSegmentationImageFilter.txx  label_air_main.cxx
Segmentation_Modules/Lungs_Segmentation/airways2/: CMakeLists.txt  SingleThresholdSegmenter_main.cxx  bifurcations.cxx  bifurcations.h  evaluateAirways.cxx  globals_itk.cxx  globals_itk.h  itkFastMarchingRestartableImageFilter.h  leakage.cxx  leakage.h  link_segments_main.cxx  log.cxx  log.h  manager.cxx  manager.h  propagator.cxx  propagator.h  segments.cxx  segments.h  talk2manager.cxx  talk2manager.h  test_prop_restart_main.cxx
Segmentation_Modules/Lungs_Segmentation/airways2/wall/: AirwayWall_Human.cxx  AirwayWall_Phantom.cxx  AirwayWall_Phantom_NoSQL.cxx  CMakeLists.txt  README  itkAirwaySectioningImageFilter.h  itkAirwaySectioningImageFilter.txx  itkBinaryFillholeImageFilter.txx  itkLookAtTransformInitializer.h  itkLookAtTransformInitializer.txx  itkObliqueSectionImageFilter.h  itkObliqueSectionImageFilter.txx
Segmentation_Modules/Lungs_Segmentation/airways2/wall/tests/: ImageEntity-odb.cxx  ImageEntity-odb.hxx  ImageEntity-odb.ixx  ImageEntity.hxx  Measure-odb.cxx  Measure-odb.hxx  Measure-odb.ixx  Measure.hxx  generatePersistence.sh  xerces_strings.hpp
Segmentation_Modules/Lungs_Segmentation/emphysema/: CMakeLists.txt  MovingAverageFilter.cxx  NOVAFilter.cxx  NOVAFilter2.cxx  NOVAFilter3.cxx  enf_ext_main.cxx  itkEmphysemaCalculationsImageFilter.h  itkEmphysemaCalculationsImageFilter.txx  itkNOVAOperator.h  itkNOVAOperator.txx  itkVisualScoreImageFilter.h  itkVisualScoreImageFilter.txx  quantify2d.cxx  quantify_enf_mask.cxx  visual_score_main.cxx
Segmentation_Modules/Lungs_Segmentation/evaluators/: CMakeLists.txt  EvaluateAirways.cxx  itkAccuracyAssessmentImageFilter.h  itkAccuracyAssessmentImageFilter.txx  itkMeanAbsoluteSurfaceDistanceImageFilter.h  itkMeanAbsoluteSurfaceDistanceImageFilter.txx  probe.cxx  probe_field.cxx
Segmentation_Modules/Lungs_Segmentation/lungs/: CMakeLists.txt  choose_lungs_main.cxx  choose_lungs_main_copy.cxx  choose_lungsv2.cxx  hu_threshold_main.cxx  itkHuThresholdImageFilter.h  itkHuThresholdImageFilter.txx  itkLabelPipelineImageFilter.h  itkLabelPipelineImageFilter.txx  label_filter.cxx  labelize_main.cxx  lungs_analyze_main.cxx  test_centroid.cxx  trachea_center.cxx  vesselness_main.cxx
Segmentation_Modules/Lungs_Segmentation/managed_client_example1/: CMakeLists.txt  example1_main.cxx
Segmentation_Modules/SpeedImageCalc/: .directory  CMakeLists.txt  SpeedImageUpdate_v2.cxx  itkAverageImageFilter.h  itkAverageImageFilter.txx  itkHessian3DToAirwaynessMeasureImageFilter.h  itkHessian3DToAirwaynessMeasureImageFilter.txx  itkSpeedCalculatorImageFilter.h  itkSpeedCalculatorImageFilter.txx
Segmentation_Modules/Texture/: CMakeLists.txt  FeatureExtraction.cxx  FeatureExtraction.h  ObjectByObjectLabelMapFilter.cxx  SegmentBloodVesselsWithMultiScaleHessianBasedMeasure.cxx  Test.h  Test.txx  TextureFeatures.cxx  VesselnessMeasureImageFilter.cxx  itkMultiScaleLaplacianBlobDetectorImageFilter.h  itkMultiScaleLaplacianBlobDetectorImageFilter.hxx  itkMultiScaleLaplacianBlobDetectorImageFilterTest.cxx
Segmentation_Modules/checkers/: CMakeLists.txt  copy_metadata_main.cxx  quantify_volume_main.cxx
Segmentation_Modules/libs/: CMakeLists.txt  dicom_utilities.cxx  dicom_utilities.h
Segmentation_Modules/propagator/: CMakeLists.txt  create_speed_image.cxx  fast_segmenter.cxx  itkFastMarchingImageFilter.txx.orig  itkFastMarchingRestartableImageFilter.cxx  itkFastMarchingRestartableImageFilter.txx  itkFastMarchingRestartableImageFilterOld.h  itkFastMarchingRestartablePropagatorImageFilter.h  itkFastMarchingRestartablePropagatorImageFilter.txx  test_fm.cxx  wrap_itkFastMarchingRestartableImageFilter.cmake
Segmentation_Modules/propagator/filters/: itkFastMarchingImageFilter.h
Segmentation_Modules/registration/: CMakeLists.txt  InvertDeformationField.cxx  TestFieldInversion_main.cxx
Segmentation_Modules/utilities/: Adul_air.cxx  Adul_aorta.cxx  Adul_background_extractor.cxx  CMakeLists.txt  Calibrate_main.cxx  CastToChar.cxx  ChangeValues.cxx  DicomSeriesReadImageWrite2.cxx  ImageHistogram2.cxx  ImageReadDicomSeriesWrite.cxx  MedianImageFilter.cxx  MergeImages.cxx  ResampleVolumesToBeIsotropic.cxx  Shrink.cxx  TracheaError.cxx  TracheaTesting.cxx  TracheaTestingSerie.cxx  apply_dilation.cxx  apply_erosion.cxx  apply_gaussian.cxx  apply_mask.cxx  apply_median.cxx  calculate_mean_std_main.cxx  change_intensities_main.cxx  convert.sh  convert2dicom.cxx  copy_image.cxx  create_masks.cxx  dicom_extractor.cxx  disconnector_main.cxx  extract_roi_main.cxx  find_trachea.cxx  inv_image.cxx  itkBackgroundImageFilter.h  itkBackgroundImageFilter.txx  itkConnectivityImageFilter.h  itkConnectivityImageFilter.txx  itkInvImageFilter.h  itkInvImageFilter.txx  itkMask2ColorBorderImageFilter.h  (+12 more)
(+31 files in other folders)
